--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,14 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+*.pyc
+~*
+*~
+*.orig
+*.pyo
+.idea/
+.settings/
+*.DS_Store
 MANIFEST
 
 # PyInstaller
